# ziggiz-courier-handler-core

./: .flake8  .gitignore  .license_header.txt  .pre-commit-config.yaml  CHANGELOG.md  COMMERCIAL-LICENSE.md  COMMIT_CONVENTION.md  DEVELOPING.md  LICENSE  LINT_FIX_PLAN.md  README.md  TOX_GUIDE.md  mypy.ini  pyproject.toml  pytest.ini  setup_tox_environment.sh  tox.ini
.github/: COPILOT_GUIDELINES.md  copilot-instructions.md  prompts.json
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: pr-courier-data-processing.yml  pr.yml  pr_benchmarks.yml  publish-courier-data-processing.yml  release-core-data-processing.yml  release-courier-data-processing.yml  release.yml  tox-matrix.yml
core_data_processing/: __init__.py  examples.py
core_data_processing/adapters/: base.py  transformers.py
core_data_processing/decoders/: __init__.py  base.py  message_decoder_plugins.py  syslog_rfc3164_decoder.py  syslog_rfc5424_decoder.py  syslog_rfc_base_decoder.py  unknown_syslog_decoder.py
core_data_processing/decoders/plugins/: __init__.py
core_data_processing/decoders/plugins/message/: __init__.py  base.py
core_data_processing/decoders/plugins/message/fortinet/: __init__.py
core_data_processing/decoders/plugins/message/fortinet/fortigate/: __init__.py  plugin.py
core_data_processing/decoders/plugins/message/generic/: __init__.py
core_data_processing/decoders/plugins/message/generic/cef/: __init__.py  plugin.py
core_data_processing/decoders/plugins/message/generic/json/: __init__.py  plugin.py
core_data_processing/decoders/plugins/message/generic/kv/: __init__.py  plugin.py
core_data_processing/decoders/plugins/message/generic/leef/: plugin.py
core_data_processing/decoders/plugins/message/generic/leef1/: __init__.py  plugin.py
core_data_processing/decoders/plugins/message/generic/leef2/: __init__.py  plugin.py
core_data_processing/decoders/plugins/message/generic/xml/: plugin.py
core_data_processing/decoders/plugins/message/paloalto/: __init__.py
core_data_processing/decoders/plugins/message/paloalto/ngfw/: __init__.py  field_maps.py  plugin.py
core_data_processing/decoders/utils/: __init__.py  cef_parser.py  csv_parser.py  json_parser.py  kv_parser.py  leef_1_parser.py  leef_2_parser.py  timestamp_parser.py  xml_parser.py
core_data_processing/encoders/: __init__.py  base.py  json_encoder.py  otel_encoder.py  syslog_rfc3164_encoder.py
core_data_processing/models/: __init__.py  common.py  event_envelope_base.py  event_structure_classification.py  message_decoder_plugins.py  syslog_rfc3164.py  syslog_rfc5424.py  syslog_rfc_base.py
core_data_processing/utils/: __init__.py  kv_parser.py
examples/: syslog_processing_example.py  syslog_rfc5424_example.py
tests/: __init__.py  conftest.py  test_handler_data_fields.py  test_integration.py
tests/test_adapters/: test_transformers.py
tests/test_decoders/: test_benchmark_syslog_rfc3164_decoder.py  test_benchmark_syslog_rfc5424_decoder.py  test_benchmark_syslog_rfc_base_decoder.py  test_benchmark_unknown_syslog_decoder.py  test_syslog_rfc3164_decoder.py  test_syslog_rfc5424_decoder.py  test_syslog_rfc_base_decoder.py  test_unknown_syslog_decoder.py  test_unknown_syslog_decoder_class_matrix.py
tests/test_decoders/plugins/message/base/: test_base_plugin.py
tests/test_decoders/plugins/message/fortinet/fortigate/: test_fortigate_integration.py  test_fortigate_plugin.py
tests/test_decoders/plugins/message/generic/: __init__.py  test_leef_2_plugin.py
tests/test_decoders/plugins/message/generic/cef/: __init__.py  test_cef.py  test_cef_integration.py  test_cef_plugin.py
tests/test_decoders/plugins/message/generic/json/: __init__.py  test_json_integration.py  test_json_plugin.py
tests/test_decoders/plugins/message/paloalto/: __init__.py
tests/test_decoders/utils/: __init__.py  test_cef_parser.py  test_csv_parser.py  test_json_parser.py  test_kv_parser.py  test_leef_1_parser.py  test_leef_2_parser.py  test_timestamp_parser.py  test_xml_parser.py  test_year_determination.py
tests/test_decoders/utils/message/: __init__.py  test_cef_parser.py  test_csv_parser.py  test_json_parser.py  test_kv_parser.py  test_leef_1_parser.py  test_leef_2_parser.py  test_xml_parser.py
tests/test_encoders/: test_json_encoder.py  test_syslog_rfc3164_encoder.py
tests/test_models/: __init__.py  test_syslog_rfc3164.py  test_syslog_rfc_base.py
tests/test_utils/: __init__.py  test_source_producer_validation.py  test_validation.py  validation.py
ziggiz_courier_handler_core/: __init__.py  examples.py
ziggiz_courier_handler_core/adapters/: __init__.py  base.py  transformers.py
ziggiz_courier_handler_core/decoders/: __init__.py  base.py  message_decoder_plugins.py  syslog_rfc3164_decoder.py  syslog_rfc5424_decoder.py  syslog_rfc_base_decoder.py  unknown_syslog_decoder.py
ziggiz_courier_handler_core/decoders/plugins/: __init__.py
ziggiz_courier_handler_core/decoders/plugins/message/: __init__.py  base.py
ziggiz_courier_handler_core/decoders/plugins/message/fortinet/: __init__.py  const.py
ziggiz_courier_handler_core/decoders/plugins/message/generic/: __init__.py  const.py
ziggiz_courier_handler_core/decoders/plugins/message/paloalto/: __init__.py  const.py  organization.py
ziggiz_courier_handler_core/decoders/utils/: __init__.py  cef_parser.py  csv_parser.py  json_parser.py  leef_1_parser.py  leef_2_parser.py  timestamp_parser.py  xml_parser.py
ziggiz_courier_handler_core/decoders/utils/message/: __init__.py  base_parser.py  cef_parser.py  csv_parser.py  json_parser.py  kv_parser.py  leef_1_parser.py  leef_2_parser.py  xml_parser.py
ziggiz_courier_handler_core/encoders/: __init__.py  base.py  json_encoder.py  otel_encoder.py  syslog_rfc3164_encoder.py
ziggiz_courier_handler_core/models/: __init__.py  common.py  event_envelope_base.py  event_structure_classification.py  meta_data_product.py  meta_data_source.py  source_producer.py  syslog_rfc3164.py  syslog_rfc5424.py  syslog_rfc_base.py
ziggiz_courier_handler_core/utils/: __init__.py  kv_parser.py
(+36 files in other folders)
