[tool.mypy]


[tool.pytest.ini_options]
env = [
    "OTEL_TRACES_EXPORTER=otlp",
    "OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318",
    "OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf",
    "OTEL_RESOURCE_ATTRIBUTES=service.name=pytest.ziggiz-courier-handler-core,service.version=dev"
]
log_cli = true
log_cli_level = "DEBUG"
testpaths = ["."]
markers = [
    "unit: Unit tests that test a single component in isolation",
    "integration: Tests that verify multiple components working together",
    "rfc3164: Tests related to RFC3164 parser functionality",
    "rfc5424: Tests related to RFC5424 parser functionality",
    "pri_only: Tests for PRI-only messages",
    "factory: Tests involving the parser factory",
]

[tool.poetry]
name = "ziggiz-courier-handler-core"
version = "0.4.0"
description = "Data processing library for decoding, transforming, and encoding data"
authors = ["Ryan Faircloth <rf@ziggiz.ai>"]
readme = "README.md"
packages = [{include = "ziggiz_courier_handler_core"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.14"
opentelemetry-api = "^1"
opentelemetry-sdk = "^1"
pydantic = "^2"
orjson = "^3"
xmltodict = "^0.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"
pytest-xdist = "^3"
black = "^25"
isort = "^6"
autoflake8 = "^0"
mypy = "^1"
pytest-mypy = "^1"
pre-commit = "^4"
flake8-docstrings = "^1"
flake8 = "^7"
flake8-import-order = "^0"
tox = "^4"
types-xmltodict = "^0"
pytest-opentelemetry = "^1.1.0"
pytest-env = "^1.1.5"
pytest-benchmark = "^5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".coverage"]

[tool.isort]
profile = "black"
known_first_party = ["ziggiz_courier_handler_core"]
known_third_party = ["tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third-party imports"
import_heading_firstparty = "Local/package imports"
no_lines_before = ["STDLIB", "LOCALFOLDER"]
lines_between_types = 1

[tool.semantic_release]
version_variable = ["pyproject.toml:version"]
version_toml = ["pyproject.toml:tool.poetry.version"]
upload_to_pypi = false
upload_to_repository = true
build_command = "pip install poetry && poetry build"
dist_path = "dist/"
remove_dist = false
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): version bump to v{version}"
commit_author = "github-actions <action@github.com>"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.next]
match = "^next$"
prerelease = true
prerelease_token = "next"

[tool.semantic_release.branches.next-major]
match = "^next-major$"
prerelease = true
prerelease_token = "next"

# Specify commit parsing and version bump rules
major_on_zero = false
[tool.semantic_release.commit_parser_options]
allowed_tags = ["decoder", "encoder", "model", "feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert", "deps"]
minor_tags = ["feat", "decoder", "encoder", "model"]
patch_tags = ["fix", "perf","deps"]
